# cloudScaling

./: .run.sh.swn  .run.sh.swo  .run.sh.swp  CMakeCache.txt  CMakeLists.txt  KeyFrameTrajectory_0.pcd  KpAITfield.pcd  Makefile  MapPointAITfield.pcd  MapPoints_1.pcd  MapPoints_with_keyframes_0.pcd  README.md  README_FOR_USAGE  cloudScaling.cbp  cloudScaling.cpp  cloudScaling.cpp.backup  cloud_visualizer.cbp  cmake_install.cmake  filtered_under_kf.pcd  run.sh  scaled_keyrameAITfield.pcd  scaled_point_cloudAITfield.pcd
